Fix GitHub SVG Rendering Bug on Mobile
Safari based browsers would refuse to render the GH SVG because it
needed either the width or height to be concrete. We now set width to
100px.

--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -171,7 +171,7 @@ header a {
 
 .logo {
 	color: var(--ansible-light);
-	font-size: xxx-large;
+	font-size: xx-large;
 	place-self: center;
 	padding: 2rem;
 	padding-top: 0;
